Version 1pl9 - released 2012-12-22
cmb     fixed broken links
cmb     added Dutch translation (contributed by roze)

Version 1pl8 - released 2012-09-23
cmb     updated Czech translation and added Czech README and manual (contributed by oldnema)

Version 1pl7 - released 2012-09-20
cmb     removed javascript: pseudo protocoll
cmb     fixed typo in English language file
cmb     updated Russian language file (contributed by old)

Version 1pl6 - released 2012-08-20
cmb     added $encoding argument to htmlspecialchars() calls
cmb     fixed potential problems with calls to ucfirst() by using Utf8_XH
cmb     removed superfluous rfc() in pagemanager_save()
cmb     updated manual with requirement of Utf8_XH

Version 1pl5 - released 2012-02-22
cmb	changed save routine to skip writing of head()

Version 1pl4 - released 2012-02-06
cmb	added check for offending extensions using their own jQuery library

Version 1pl3 - released 2012-01-24
cmb	improved handling of relocation after saving
cmb	added Polish translation (contributed by learnandcode)
cmb	updated manual accordingly

Version 1pl2 - released 2012-01-21
cmb	added plugin icon
cmb	extended copyright to 2012
cmb	fixed minor bug: save button in toolbar was not hidden, if irregular sitestructure was found
cmb	inhibited renaming of page, if its heading is only partially formatted
cmb	fixed minor bug in jstree: D&D inside a node didn't work
cmb	made some minor cosmetic changes
cmb	added Russian translation (contributed by Termin)
cmb	updated manual accordingly

Version 1pl1 - released 2011-12-16
cmb	removed beta warning in manual
cmb	cosmetic changes in manual
cmb	added defaultconfig.php for CMSimple_XH 1.5

Version 1 - released 2011-11-16
cmb	added french language file (provided by Bob)

Version 1rc4 - released 2011-10-23
cmb	made plugin administration available, even if another external pagemanager is configured
cmb	changed YES/NO in configuration to true/false
cmb	changed languages files accordingly
